# claude-code-camp-2026-Q2

./: .gitignore
.boukensha/prompts/player/: system.md
.boukensha/sessions/: 20260724T032716Z-8b11209b.jsonl  20260724T035819Z-d27527bf.jsonl  20260724T042252Z-d7914076.jsonl  20260724T043522Z-2d501674.jsonl  20260724T045252Z-7e6dd3e9.jsonl  20260724T050812Z-d9a68375.jsonl  20260724T052120Z-fcb84aa6.jsonl  20260724T054036Z-e911957b.jsonl  20260724T055914Z-b1d75100.jsonl  20260724T064402Z-182c6cc1.jsonl  20260724T070621Z-7345eb6d.jsonl
.claude/skills/python-to-rust-port/: SKILL.md
.claude/skills/ruby-to-python-port/: SKILL.md
docs/: explore_architectures.md
docs/journal/: 0_preweek.md  1_week1.md  template.md
docs/plans/python_port/: 00_config.md  01_struct_skeleton.md  02_the_registry.md  03_prompt_builder.md  04_api_client.md  05_agent_loop.md  06_the_logger.md  07_the_run_dsl.md  08_the_repl_loop.md  09_global_executable.md
docs/plans/rust_port/: 00_config  (+9 more)
week0_explore/: CHALLENGES.md
week1_baseline/: Cargo.toml  ITERATIONS.md
week1_baseline/python/: README.md
week1_baseline/python/09_global_executable/: README.md  pyproject.toml
week1_baseline/python/09_global_executable/lib/: boukensha_loader.py  boukensha_rc.py
week1_baseline/python/09_global_executable/lib/boukensha/: __init__.py  config.py  logger.py  repl.py  run_dsl.py
week1_baseline/rust/: README.md
week1_baseline/rust/06_the_logger/: Cargo.toml  README.md
week1_baseline/rust/06_the_logger/examples/: example.rs
week1_baseline/rust/06_the_logger/src/: agent.rs  config.rs  errors.rs  lib.rs  logger.rs
week1_baseline/rust/06_the_logger/src/backends/: ollama.rs  ollama_cloud.rs
week1_baseline/rust/09_global_executable/: Cargo.toml  README.md
week1_baseline/rust/09_global_executable/src/: agent.rs  client.rs  config.rs  context.rs  lib.rs  prompt_builder.rs  rc.rs  registry.rs  repl.rs
week1_baseline/rust/09_global_executable/src/backends/: anthropic.rs  base.rs  mod.rs
(+172 files in other folders)
