[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "boukensha"
version = "0.9.0"
description = "BOUKENSHA — a tiny teaching framework for coding harnesses"
requires-python = ">=3.9"
dependencies = [
    "python-dotenv",
    "PyYAML",
]

[project.scripts]
boukensha = "boukensha_loader:main"

[tool.setuptools]
package-dir = {"" = "lib"}
py-modules = ["boukensha_loader", "boukensha_rc"]

[tool.setuptools.packages.find]
where = ["lib"]
