[package]
name = "boukensha_06_the_logger"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_json = { version = "1", features = ["preserve_order"] }
dotenvy = "0.15"
dirs = "5"
indexmap = "2"
ureq = { version = "3", features = ["native-tls"] }
time = { version = "0.3", features = ["formatting"] }
